# toy-ml-project

./: .gitignore  Dockerfile  README.md  build.sh  setup.cfg
.github/workflows/: github-actions.yml
paa/deployment/: __main__.py
paa/deployment/application/: model_deployment.py
paa/deployment/data_model/: data_model.py
paa/domain/: __main__.py
paa/domain/data/: data_model.py  dataset.py
paa/domain/metrics/: __init__.py  metrics.py
paa/domain/modeling/: __init__.py  classifier.py
paa/domain/modelling/: classifier.py
paa/domain/utils/: __init__.py  utils.py
paa/infra/: __main__.py
paa/infra/application/: app.py
paa/infra/application/data_model/: data_model.py
paa/infra/application/utils/: utils.py
tests/deployment/: test_main.py
tests/deployment/application/: test_model_deployment.py
tests/domain/data/: test_dataset.py
tests/domain/metrics/: test_metrics.py
tests/domain/modelling/: test_classifier.py
tests/domain/utils/: test_utils.py
tests/infra/application/: test_app.py
tests/infra/application/utils/: test_utils.py
