[metadata]
name = paa
version = 0.1.0
description = python avance package
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages=find:
install_requires =
    fastapi==0.73.0
    scikit-learn==1.0
    uvicorn==0.17.1

[options.entry_points]
console_scripts =
    paa_train = paa.domain.__main__:train_model
    paa_deploy = paa.deployment.__main__:deploy_model

[options.extras_require]
tests= 
    black==22.1.0
    build==0.7.0
    flake8==4.0.1
    pytest==7.0.1
    pytest-cov==3.0.0
    requests==2.27.1

[options.packages.find]
exclude = tests
